# advent-of-code

2023/: AdventOfCode2023.cabal
2023-hs/: .gitignore  AdventOfCode2023.cabal  fourmolu.yaml
2023-hs/src/AdventOfCode/: Day02.hs  Day04.hs  Day06.hs  Day07.hs  Main.hs  Parser.hs
2023-rs/: .gitignore  Cargo.toml  rustfmt.toml
2023-rs/src/: cli.rs  downloader.rs  error.rs  main.rs  prelude.rs  solution.rs
2023-rs/src/days/: day_08.rs  day_09.rs  day_10.rs  mod.rs
2023/app/: Main.hs
2023/bench/: Main.hs
2023/src/AdventOfCode/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Main.hs  Parser.hs  Prelude.hs
