cargo-features = ["edition2024"]

[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "advent-of-code"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.82"
reqwest = { version = "0.12.4", features = ["cookies"] }
tokio = { version = "1.16.1", features = ["fs", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
nom = "7.1.3"
rustc-hash = "1.1.0"
itertools = "0.12.1"
num = "0.4.2"
