cabal-version: 3.4
name:          AdventOfCode2023
version:       1.0.0.0
homepage:      https://github.com/sicikh/advent-of-code
license:       Apache-2.0
license-file:  LICENSE
author:        Kirill Lukashev
maintainer:    kirill.lukashev.sic@gmail.com
build-type:    Simple

common warnings
    ghc-options: -Wall

common extensions
    default-language:   GHC2021
    default-extensions:
        LambdaCase
        NamedFieldPuns
        OverloadedStrings

common dependencies
    build-depends:
        , attoparsec
        , base                  ^>=4.18.1.0
        , bytestring
        , bytestring-trie
        , containers
        , deepseq
        , http-client
        , http-client-tls
        , http-types
        , parser-combinators
        , text
        , time
        , unordered-containers
        , vector

library
    import:          warnings, extensions, dependencies
    exposed-modules:
        AdventOfCode.Day01
        AdventOfCode.Day02
        AdventOfCode.Day03
        AdventOfCode.Main
        AdventOfCode.Parser
        AdventOfCode.Prelude

    -- other-modules:
    -- other-extensions:
    hs-source-dirs:  src

executable AdventOfCode2023
    import:         warnings, extensions, dependencies
    main-is:        Main.hs

    -- other-modules:
    -- other-extensions:
    build-depends:  AdventOfCode2023
    hs-source-dirs: app
